# GuardPy

./: .gitattributes  .gitignore  CMakeLists.txt  GuardPy  README.md  bjcc.go  main.cpp  main.go  main.zig
.github/workflows/: main.yml
App/Background/1 Window/: black_purple.cpp
App/Buttons/Button ,Go!,/: button.cpp
App/Logic/Keyboard/Enter/: enter_handler.cpp
App/Logic/Keyboard/F11/: f11.cpp
App/Page 2 ,Create Account,/Buttons/Button ,Create,/: button_create.cpp
App/Page 2 ,Create Account,/Errors/Error ,Name,/: error_name.cpp
App/Page 2 ,Create Account,/Errors/Error ,Password,/: error_password.cpp
App/Page 2 ,Create Account,/Text Box/Name Box/: name.cpp
App/Page 2 ,Create Account,/Text Box/Password Box/: password.cpp
App/Texts/Text ,info,/: info.txt
App/Titles/Title ,GuardPy,/: guard_title.cpp
DataBase/Bibliotics/Go Requests/: client.go  client_config.go  docker.go  door.go  errors.go  headers.go  id.go  main.go  online.go  requests.go  root.go  run.go  status.go
DataBase/Bibliotics/Go Requests/ID/: client_id.go  eye_id.go  eye_root_id.go  eye_unique_id.go  id.go  root_id.go  unique_id.go
DataBase/Bibliotics/Go Requests/Online Pack/: answer.go  banal.go  checkout.json  client.go  client_shark.json  clients.go  connection.go  docker.json  http.go  https.go  import_client.go  master_client.go  online.go  packet.git  packet.go  root.go  sign.go  update.go
DataBase/Bibliotics/Zig Requests/: _init.zig  cache.zig  cacher.zig  cash_online.zig  clear.zig  clear_cache.zig  data.zig  docker.zig  memory_cache.zig  ram_cache.zig  session.zig  video_memory_cache.zig
DataBase/Bibliotics/Zig Requests/Clearing Tools/: check.git  (+4 more)
DataBase/Data Transfer/.json pack/: __sas__.json  action.json  client.json  connection.json  ik.json  inducle.json  monitoring.json  online.json  pass.json  update.json
DataBase/Data Transfer/Java Analytic/: analytic.java  security.java
DataBase/Data Transfer/Online/: data_online.cpp  logic_online.h  online_core.h  traffic.cpp
Online/API Token/API Key/: api_generate_key.c  api_key.c  eye_keys_api.c
Online/API Token/No Chat/: no_chat_api_key.c
Online/API Token/Yes Chat/: Token_Chat_activate.c
Online/Chat/Chat History/: chat_history.zig
Online/Chat/Chat Message/: fly_message.cpp  fly_message.go
Online/Chat/Voice Chat/: voice.go
Online/Messages/Message/: cache_message.zig  message.go
Online/Messages/Store/: store.go
Online/Script Verbosity/Go&Zig/: gozig.cpp  gozig.go  gozig.zig
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
exe/: GuardPy
(+54 files in other folders)
